cargo-features = ["edition2024"]

[package]
name = "ffff"
version = "0.1.0"
description = "Created with Anchor, dapp by Nerofea"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "ffff"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

